--- a/_includes/Liang_Zerui_Resume.html
+++ b/_includes/Liang_Zerui_Resume.html
@@ -5,18 +5,18 @@ xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
 xmlns:mv="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta name=±êÌâ content="Resume | Liang Zerui | ÁºÔóî£">
-<meta name=¹Ø¼ü´Ê content="ÁºÔóî£ | ´«²¥Ñ§ | ´«Ã½ | ¶¨Á¿ÑĞ¾¿ | Êı¾İÍÚ¾ò">
+<meta name=æ ‡é¢˜ content="Resume | Liang Zerui | æ¢æ³½ç¿">
+<meta name=å…³é”®è¯ content="æ¢æ³½ç¿ | ä¼ æ’­å­¦ | ä¼ åª’ | å®šé‡ç ”ç©¶ | æ•°æ®æŒ–æ˜">
 <meta http-equiv=Content-Type content="text/html; charset=x-mac-chinesesimp">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 14">
 <meta name=Originator content="Microsoft Word 14">
 <link rel=File-List href="Liang%20Zerui%20Resume.files/filelist.xml">
-<title>Resume | Liang Zerui | ÁºÔóî£</title>
+<title>Resume | Liang Zerui | æ¢æ³½ç¿</title>
 <!--[if gte mso 9]><xml>
  <o:DocumentProperties>
   <o:Author>Brian Zhang</o:Author>
-  <o:Keywords>ÁºÔóî£ | ´«²¥Ñ§ | ´«Ã½ | ¶¨Á¿ÑĞ¾¿ | Êı¾İÍÚ¾ò</o:Keywords>
+  <o:Keywords>æ¢æ³½ç¿ | ä¼ æ’­å­¦ | ä¼ åª’ | å®šé‡ç ”ç©¶ | æ•°æ®æŒ–æ˜</o:Keywords>
   <o:LastAuthor>Zerui Liang</o:LastAuthor>
   <o:Revision>2</o:Revision>
   <o:TotalTime>17</o:TotalTime>
@@ -82,8 +82,8 @@ xmlns:mv="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40">
    <w:CachedColBalance/>
    <w:UseFELayout/>
   </w:Compatibility>
-  <w:NoLineBreaksAfter Lang="JA">([{¡¤¡®¡°¡´¡¶¡¸¡º¡¾¡²¡¼£¨£®£Û£û&#65505;&#65509;</w:NoLineBreaksAfter>
-  <w:NoLineBreaksBefore Lang="JA">!),.:;?]}¡§¡¤¡¦¡¥&#8213;¡¬¡¯¡±ÿ¡Ã¡¢¡£¡¨¡©¡µ¡·¡¹¡»¡¿¡³¡½£¡£¢£§£©£¬£®£º£»£¿£İ£à£ü£ı&#65374;&#65504;</w:NoLineBreaksBefore>
+  <w:NoLineBreaksAfter Lang="JA">([{Â·â€˜â€œã€ˆã€Šã€Œã€ã€ã€”ã€–ï¼ˆï¼ï¼»ï½›&#65505;&#65509;</w:NoLineBreaksAfter>
+  <w:NoLineBreaksBefore Lang="JA">!),.:;?]}Â¨Â·Ë‡Ë‰&#8213;â€–â€™â€â€¦âˆ¶ã€ã€‚ã€ƒã€…ã€‰ã€‹ã€ã€ã€‘ã€•ã€—ï¼ï¼‚ï¼‡ï¼‰ï¼Œï¼ï¼šï¼›ï¼Ÿï¼½ï½€ï½œï½&#65374;&#65504;</w:NoLineBreaksBefore>
   <m:mathPr>
    <m:mathFont m:val="Cambria Math"/>
    <m:brkBin m:val="before"/>
@@ -282,21 +282,21 @@ xmlns:mv="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:0 268435456 0 0 -2147483648 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:80;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:80;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:3 680460288 22 0 262145 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:80;
 	mso-generic-font-family:auto;
@@ -312,7 +312,7 @@ xmlns:mv="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40">
 @font-face
 	{font-family:FreeSans;
 	panose-1:0 0 0 0 0 0 0 0 0 0;
-	mso-font-alt:"£Í£Ó Ã÷³¯";
+	mso-font-alt:"ï¼­ï¼³ æ˜æœ";
 	mso-font-charset:128;
 	mso-generic-font-family:auto;
 	mso-font-format:other;
@@ -327,6 +327,7 @@ xmlns:mv="http://macVmlSchemaUri" xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:auto;
 	mso-font-signature:1 134676480 16 0 131072 0;}
  /* Style Definitions */
+
 p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{mso-style-unhide:no;
 	mso-style-qformat:yes;
@@ -339,13 +340,13 @@ p.MsoNormal, li.MsoNormal, div.MsoNormal
 	font-size:11.0pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	mso-ansi-language:EN-US;
 	mso-fareast-language:EN-US;}
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-unhide:no;
-	mso-style-link:Ò³Ã¼×Ö·û;
+	mso-style-link:é¡µçœ‰å­—ç¬¦;
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -358,13 +359,13 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	mso-padding-alt:0cm 0cm 1.0pt 0cm;
 	font-size:9.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	mso-ansi-language:EN-US;
 	mso-fareast-language:EN-US;}
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-unhide:no;
-	mso-style-link:Ò³½Å×Ö·û;
+	mso-style-link:é¡µè„šå­—ç¬¦;
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:widow-orphan;
@@ -372,7 +373,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	layout-grid-mode:char;
 	font-size:9.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	mso-ansi-language:EN-US;
 	mso-fareast-language:EN-US;}
@@ -388,7 +389,7 @@ p.MsoBodyText, li.MsoBodyText, div.MsoBodyText
 	font-size:11.0pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	mso-ansi-language:EN-US;
 	mso-fareast-language:EN-US;}
@@ -407,7 +408,7 @@ a:visited, span.MsoHyperlinkFollowed
 p.Name, li.Name, div.Name
 	{mso-style-name:Name;
 	mso-style-unhide:no;
-	mso-style-next:Õı³£;
+	mso-style-next:æ­£å¸¸;
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:22.0pt;
@@ -418,7 +419,7 @@ p.Name, li.Name, div.Name
 	font-size:22.0pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	text-transform:uppercase;
 	letter-spacing:4.0pt;
@@ -435,7 +436,7 @@ p.Address1, li.Address1, div.Address1
 	font-size:7.5pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	text-transform:uppercase;
 	letter-spacing:1.5pt;
@@ -452,7 +453,7 @@ p.Address2, li.Address2, div.Address2
 	font-size:7.5pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	text-transform:uppercase;
 	letter-spacing:1.5pt;
@@ -461,7 +462,7 @@ p.Address2, li.Address2, div.Address2
 p.Achievement, li.Achievement, div.Achievement
 	{mso-style-name:Achievement;
 	mso-style-unhide:no;
-	mso-style-parent:ÕıÎÄÎÄ±¾;
+	mso-style-parent:æ­£æ–‡æ–‡æœ¬;
 	margin-top:0cm;
 	margin-right:0cm;
 	margin-bottom:3.0pt;
@@ -476,16 +477,16 @@ p.Achievement, li.Achievement, div.Achievement
 	font-size:11.0pt;
 	mso-bidi-font-size:10.0pt;
 	font-family:Garamond;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-bidi-font-family:"Times New Roman";
 	mso-ansi-language:EN-US;
 	mso-fareast-language:EN-US;}
 span.a
-	{mso-style-name:Ò³Ã¼×Ö·û;
+	{mso-style-name:é¡µçœ‰å­—ç¬¦;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
 	mso-style-parent:"";
-	mso-style-link:Ò³Ã¼;
+	mso-style-link:é¡µçœ‰;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:Garamond;
@@ -493,11 +494,11 @@ span.a
 	mso-hansi-font-family:Garamond;
 	mso-fareast-language:EN-US;}
 span.a0
-	{mso-style-name:Ò³½Å×Ö·û;
+	{mso-style-name:é¡µè„šå­—ç¬¦;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
 	mso-style-parent:"";
-	mso-style-link:Ò³½Å;
+	mso-style-link:é¡µè„š;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:Garamond;
@@ -510,7 +511,7 @@ span.SpellE
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
-	mso-fareast-font-family:ËÎÌå;}
+	mso-fareast-font-family:å®‹ä½“;}
  /* Page Definitions */
 @page
 	{mso-page-border-surround-header:no;
@@ -529,6 +530,7 @@ span.SpellE
 div.WordSection1
 	{page:WordSection1;}
  /* List Definitions */
+
 @list l0
 	{mso-list-id:-227;
 	mso-list-template-ids:-448608476;}
@@ -1328,8 +1330,9 @@ ul
 <!--[if gte mso 10]>
 <style>
  /* Style Definitions */
+
 table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -2041,7 +2044,7 @@ mso-ansi-language:FR-CA;mso-fareast-language:ZH-CN'><o:p>&nbsp;</o:p></span></p>
   <p class=MsoNormal align=left style='margin-left:15.4pt;mso-para-margin-left:
   1.4gd;text-align:left;layout-grid-mode:char'><i style='mso-bidi-font-style:
   normal'><span lang=EN-US style='mso-bidi-font-size:11.0pt;font-family:"Times New Roman";
-  mso-fareast-language:ZH-CN'>Re-producer (Produced based on Dr. Jeffery¡¯s
+  mso-fareast-language:ZH-CN'>Re-producer (Produced based on Dr. Jefferyâ€™s
   work)</span></i><b style='mso-bidi-font-weight:normal'><span lang=EN-US
   style='mso-bidi-font-size:11.0pt;font-family:"Times New Roman";mso-fareast-language:
   ZH-CN'><o:p></o:p></span></b></p>
